# fruitloops

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: release.yml
data/: manifest.csv
data/comparison/flywire_vs_hemibrain/: dataset_summary.csv  flywire_body_summary_with_match_groups.csv  flywire_full_summary_with_match_groups.csv  flywire_ln_aliases.csv  flywire_ln_label_crosswalk.csv  flywire_ln_nt_top3_by_class.csv  flywire_ln_nt_top3_by_hemisphere.csv  flywire_ln_nt_top3_by_match_group.csv  flywire_ln_nt_top3_by_root.csv  flywire_mapped_type_summary.csv  flywire_only_combined_ln_types.csv  hemibrain_only_combined_ln_types.csv  ln_class_inventory.csv  matched_ln_class_similarity.csv  shared_glomerulus_comparison.csv  shared_type_comparison.csv  shared_type_comparison_mapped_labels.csv  top_flywire_bodies_by_score.csv  top_flywire_types_by_score.csv  top_hemibrain_bodies_by_score.csv  top_hemibrain_types_by_score.csv
data/hemibrain/connectome_root/: LN_ORN_inputs_ipsi_contra.csv  LN_to_LN_full_report_unique_names sample.csv  LN_to_LN_full_report_unique_names.csv  LN_to_LN_full_report_with_metadata.csv
data/hemibrain/ln_orn_by_glomerulus/: l2LN20_l2LN20_R_glomerular_ORN_inputs_ipsi_contra.csv  l2LN22_l2LN22_R_glomerular_ORN_inputs_ipsi_contra.csv  lLN10_lLN10_R_glomerular_ORN_inputs_ipsi_contra.csv  lLN11_lLN11_R_glomerular_ORN_inputs_ipsi_contra.csv  lLN14_lLN14_R_glomerular_ORN_inputs_ipsi_contra.csv  lLN16A_lLN16a_R_glomerular_ORN_inputs_ipsi_contra.csv  lLN2S_lLN2S(Star)_R_glomerular_ORN_inputs_ipsi_contra.csv  lLN7_lLN7_R_glomerular_ORN_inputs_ipsi_contra.csv  lLN8_lLN8_R_glomerular_ORN_inputs_ipsi_contra.csv  (+22 more)
fruitloops/: __init__.py  aggregate.py  bulk.py  cache.py  cli.py  cli_bulk.py  cli_olfaction.py  connectome.py  data.py  env.py  filters.py  formatting.py  live.py  olfaction.py  olfaction_labels.py  olfaction_live.py  plotting.py
scripts/: build_data_snapshot.py  live_flywire.py  live_hemibrain.py  plot_csv.py
tests/: test_cli.py
(+1769 files in other folders)
