[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fruitloops"
version = "0.1.0"
description = "Agent-friendly CLI for querying local connectome analysis tables."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Gustavo Madeira Santana" }]
dependencies = []

[project.optional-dependencies]
live = ["caveclient", "neuprint-python"]
plot = ["matplotlib>=3.7"]

[project.scripts]
fruitloops = "fruitloops.cli:main"

[tool.setuptools.packages.find]
include = ["fruitloops*"]
