[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fruitloops"
version = "0.1.1"
description = "Agent-friendly CLI for querying local connectome analysis tables."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Gustavo Madeira Santana" }]
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://github.com/gumadeiras/fruitloops"
Repository = "https://github.com/gumadeiras/fruitloops"

[project.optional-dependencies]
bulk = ["duckdb>=1.1", "pyarrow>=14"]
live = ["caveclient", "neuprint-python"]
plot = ["matplotlib>=3.7"]

[project.scripts]
fruitloops = "fruitloops.cli:main"

[tool.setuptools.packages.find]
include = ["fruitloops*"]
